welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
if (isFacingTrail()) {
                 ^SlugSnail:10: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
   if (isFacingTrail()) {
                    ^SlugSnail:18: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
if (isFacingTrail()) {
                 ^SlugSnail:34: error: too many arguments for method getCouleurSol: ()java.awt.Color
    if ((getCouleurSol(c:Color)) == c:Color)  {
                      ^SlugSnail:34: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if ((getCouleurSol(c:Color)) == c:Color)  {
                                     ^